--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,8 +24,9 @@ dependencies:
   flutter:
     sdk: flutter
 
-  #cloud_firestore: ^0.13.0+1
+  firebase_database: "^4.3.0"
   cupertino_icons: ^1.0.0
+  firebase_core: ^0.5.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
